import java.util.ArrayList;

public class Grupo extends EtapaMundial{

    @Override
    public ArrayList<Equipo> getEquipoQueAvanza() {
        return super.getEquipoQueAvanza();
    }
}
