import java.util.ArrayList;

public class Llave extends EtapaMundial{
    private String nombre;

    public Llave(String nombre){
        super();
    }

    @Override
    public ArrayList<Equipo> getEquipoQueAvanza() {
        return super.getEquipoQueAvanza();
    }
}
